# hyperscan-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in
.github/workflow/: debian-package.yml
.github/workflows/: debian-package.yml
Examples/: MultiPatternSearch.cpp  SinglePatternSearch.cpp  SinglePatternStream.cpp
HyperScan/: BlockDatabase.h  BlockScanner.cpp  BlockScanner.h  Database.cpp  Database.h  DatabaseSerializer.cpp  DatabaseSerializer.h  Exceptions.h  ExpressionInfo.cpp  ExpressionInfo.h  ExtendedExpressionContext.cpp  ExtendedExpressionContext.h  HyperScan.h  IMatcher.h  IScanner.h  Literal.cpp  Literal.h  MultiLiteral.cpp  MultiLiteral.h  MultiPattern.cpp  MultiPattern.h  MultiPatternExtended.cpp  MultiPatternExtended.h  Pattern.cpp  Pattern.h  PlatformInfo.cpp  PlatformInfo.h  Scanner.cpp  Scanner.h  Scratch.cpp  Scratch.h  Stream.cpp  Stream.h  StreamDatabase.h  StreamScanner.cpp  StreamScanner.h  VectorDatabase.h  VectorScanner.cpp  VectorScanner.h  VectoredDatabase.h
examples/: MultiPatternSearch.cpp  SinglePatternSearch.cpp  SinglePatternStream.cpp
includes/: Exceptions.h  ExtendedExpressionContext.h  HyperScan.h  IMatcher.h  MultiLiteral.h  MultiPatternExtended.h  Pattern.h  PlatformInfo.h  Scanner.h  Scratch.h  Stream.h
src/: Database.cpp  ExpressionInfo.cpp  ExtendedExpressionContext.cpp  Literal.cpp  MultiPattern.cpp  Pattern.cpp  Scanner.cpp  Scratch.cpp  Stream.cpp
