cmake_minimum_required(VERSION 3.17)
project(hyperscan)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

link_libraries(libhs.so)

add_executable(single_pattern_test Examples/SinglePatternSearch.cpp HyperScan/PlatformInfo.cpp HyperScan/PlatformInfo.h HyperScan/Pattern.cpp HyperScan/Pattern.h HyperScan/Literal.cpp HyperScan/Literal.h HyperScan/MultiPattern.cpp HyperScan/MultiPattern.h HyperScan/MultiPatternExtended.cpp HyperScan/MultiPatternExtended.h HyperScan/MultiLiteral.cpp HyperScan/MultiLiteral.h HyperScan/ExpressionInfo.cpp HyperScan/ExpressionInfo.h HyperScan/Database.cpp HyperScan/Database.h HyperScan/Scratch.cpp HyperScan/Scratch.h HyperScan/IMatcher.h HyperScan/IScanner.h HyperScan/BlockDatabase.h HyperScan/Exceptions.h HyperScan/ExtendedExpressionContext.h HyperScan/ExtendedExpressionContext.cpp HyperScan/ExtendedExpressionContext.h HyperScan/Scanner.cpp HyperScan/Scanner.h HyperScan/Stream.cpp HyperScan/Stream.h)
add_executable(multi_pattern_test Examples/MultiPatternSearch.cpp HyperScan/PlatformInfo.cpp HyperScan/PlatformInfo.h HyperScan/Pattern.cpp HyperScan/Pattern.h HyperScan/Literal.cpp HyperScan/Literal.h HyperScan/MultiPattern.cpp HyperScan/MultiPattern.h HyperScan/MultiPatternExtended.cpp HyperScan/MultiPatternExtended.h HyperScan/MultiLiteral.cpp HyperScan/MultiLiteral.h HyperScan/ExpressionInfo.cpp HyperScan/ExpressionInfo.h HyperScan/Database.cpp HyperScan/Database.h HyperScan/Scratch.cpp HyperScan/Scratch.h HyperScan/IMatcher.h HyperScan/IScanner.h HyperScan/BlockDatabase.h HyperScan/Exceptions.h HyperScan/ExtendedExpressionContext.h HyperScan/ExtendedExpressionContext.cpp HyperScan/ExtendedExpressionContext.h HyperScan/Scanner.cpp HyperScan/Scanner.h HyperScan/Stream.cpp HyperScan/Stream.h)
add_executable(single_pattern_stream_test Examples/SinglePatternStream.cpp HyperScan/PlatformInfo.cpp HyperScan/PlatformInfo.h HyperScan/Pattern.cpp HyperScan/Pattern.h HyperScan/Literal.cpp HyperScan/Literal.h HyperScan/MultiPattern.cpp HyperScan/MultiPattern.h HyperScan/MultiPatternExtended.cpp HyperScan/MultiPatternExtended.h HyperScan/MultiLiteral.cpp HyperScan/MultiLiteral.h HyperScan/ExpressionInfo.cpp HyperScan/ExpressionInfo.h HyperScan/Database.cpp HyperScan/Database.h HyperScan/Scratch.cpp HyperScan/Scratch.h HyperScan/IMatcher.h HyperScan/IScanner.h HyperScan/BlockDatabase.h HyperScan/Exceptions.h HyperScan/ExtendedExpressionContext.h HyperScan/ExtendedExpressionContext.cpp HyperScan/ExtendedExpressionContext.h HyperScan/Scanner.cpp HyperScan/Scanner.h HyperScan/Stream.cpp HyperScan/Stream.h)